public/assets/transition-page/styles/transition-page.css
:root {
  --text-color: #384a51;
  --text-emphasize-color: #456682;
  --banner-color: #f9f9f9;
  --button-text-color: #ffffff;
  --button-pine-color: #456682;
  --button-seaweed-color: #384a51;
  --divider-grey-color: #e8e8e8;
}

body {
  position: relative;
  -webkit-font-smoothing: antialiased;
  font-family: 'IBM Plex Sans', sans-serif;
  color: var(--text-color);
  overflow-wrap: break-word;
  /* Do not use default window margins. */
  margin: 0 !important;
  padding: 0 !important;
}

button {
  font-family: inherit;
}

.emphasize-text-color {
  color: var(--text-emphasize-color) !important;
}

.semi-bold-text {
  font-weight: 500 !important;
}

.divider {
  height: 1px;
  background-color: var(--divider-grey-color);
  margin-top: 20.8px;
  margin-bottom: 30px;
}

#page-banner {
  position: fixed;
  bottom: 0;
  display: flex;
  justify-content: center;
  height: 61px;
  width: 100%;
  background-color: var(--banner-color);
}

#page-banner-content {
  display: flex;
  align-items: center;
  padding-left: 30px;
  padding-right: 30px;
}

#page-banner-content img {
  fill: var(--text-color);
  width: 18px;
  height: 18px;
  margin-right: 5px;
}

#page-banner-content p {
  font-size: 13px;
  padding: 0;
  margin: 0;
}

#main-container {
  margin-top: min(106px, 12vh);
  display: flex;
  justify-content: center;
  margin-left: 57px;
  margin-right: 57px;
}

#main-message h3 {
  font-size: 18px;
  font-weight: 600;
  line-height: 1.36;
  color: var(--button-seaweed-color);
  margin-top: 0;
  margin-bottom: 0;
}

#main-message p {
  margin-top: 15px;
  margin-bottom: 30px;
}

#main-message button {
  width: 211px;
  height: 44px;
  border-radius: 40px;
  border: solid 1px var(--button-pine-color);
  background-color: var(--button-pine-color);
  /* Styles adopted by MUI contained buttons. */
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  cursor: pointer;
  outline: 0;
}

#main-message button:hover {
  background-color: var(--button-seaweed-color);
}

#main-button-content {
  display: flex;
  justify-content: center;
  align-items: center;
}

#main-button-content p,
img {
  fill: var(--button-text-color);
  color: var(--button-text-color);
  font-size: 14px;
  font-weight: 500;
  padding: 0;
  margin: 0;
}

#main-button-content img {
  width: 20px;
  height: 20px;
  margin-left: 5px;
}

@media only screen and (min-width: 600px) {
  body {
    flex-direction: column-reverse;
    justify-content: flex-end;
  }

  #main-message h3 {
    font-size: 22px;
  }

  #main-container {
    margin-top: 174px;
  }

  #page-banner {
    top: 0;
  }
}

